--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,31 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+           xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+           xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+		  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+           version="3.0">
+
+    <welcome-file-list>
+        <welcome-file>index</welcome-file>
+    </welcome-file-list>
+
+    <filter>
+        <filter-name>NavFilter</filter-name>
+        <filter-class>ua.ck.codenvy.simulator.filter.MyFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>NavFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <listener>
+        <listener-class>ua.ck.codenvy.simulator.servlet.AppListener</listener-class>
+    </listener>
 
     <servlet>
-        <servlet-name>jersey-rest</servlet-name>
-        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-        <init-param>
-            <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>ua.ck.codenvy.simulator.rest</param-value>
-        </init-param>
-        <init-param>
-            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <load-on-startup>1</load-on-startup>
+        <servlet-name>index</servlet-name>
+        <servlet-class>ua.ck.codenvy.simulator.servlet.IndexServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>generator</servlet-name>
+        <servlet-class>ua.ck.codenvy.simulator.servlet.GeneratorServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>employees</servlet-name>
+        <servlet-class>ua.ck.codenvy.simulator.servlet.EmployeesServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CreatorGenerator</servlet-name>
+        <servlet-class>ua.ck.codenvy.simulator.server.CreatorGeneratorImpl</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DbManager</servlet-name>
+        <servlet-class>ua.ck.codenvy.simulator.server.DbManagerImpl</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>jersey-rest</servlet-name>
-        <url-pattern>/rest/*</url-pattern>
+        <servlet-name>index</servlet-name>
+        <url-pattern>/index</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>generator</servlet-name>
+        <url-pattern>/generator</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>employees</servlet-name>
+        <url-pattern>/employees</url-pattern>
     </servlet-mapping>
 
-    <!-- Default page to serve -->
-    <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-    </welcome-file-list>
+    <servlet-mapping>
+        <servlet-name>CreatorGenerator</servlet-name>
+        <url-pattern>/ua.ck.codenvy.simulator.GeneratorEmployees/creatorGenerator</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DbManager</servlet-name>
+        <url-pattern>/ua.ck.codenvy.simulator.ManagementEmployees/dbManager</url-pattern>
+    </servlet-mapping>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error404.jsp</location>
+    </error-page>
 
 </web-app>
